always too much

--- a/dspace/.env
+++ b/dspace/.env
@@ -1,26 +1,27 @@
+# DSpace Environment Variables
+DSPACE_NAME="Badisa's Data Science Wonderporium" 
+DSPACE_BASE_URL=https://dspace.example.com
+
 # Database settings
-POSTGRES_PASSWORD=change_this_password_in_production
+POSTGRES_PASSWORD=secure_password_here
 
 # Mail configuration
 MAIL_SERVER=smtp.example.com
 MAIL_PORT=587
 MAIL_FROM=dspace@example.com
-MAIL_USER=mailuser
-MAIL_PASSWORD=change_this_password
+MAIL_USER=mail_user
+MAIL_PASSWORD=mail_password
 
 # Admin account
 ADMIN_EMAIL=admin@example.com
-ADMIN_PASSWORD=admin
+ADMIN_PASSWORD=admin_password
 ADMIN_FIRSTNAME=DSpace
-ADMIN_LASTNAME=Administrator
+ADMIN_LASTNAME=Admin
 
-# Base URL for DSpace
-DSPACE_BASE_URL=https://dspace.example.com
+# Handle configuration
+HANDLE_PREFIX=123456789
 
-# JVM settings
-JAVA_OPTS=-Xmx2048m -Xms1024m -XX:+UseG1GC -XX:+UseStringDeduplication
-
-# SMTP settings for postfix container (if used)
-SMTP_RELAYHOST=smtp.example.com:587
-SMTP_USERNAME=smtp_user
-SMTP_PASSWORD=change_this_password
+# Additional DSpace configuration (will be inserted into local.cfg)
+DSPACE_CFG_log__P__dir=/dspace/log
+DSPACE_CFG_upload__P__max=2000000000
+DSPACE_CFG_solr__P__server=http://dspacesolr:8983/solr
