Assumed there will be some tweaking

--- a/dspace/.env
+++ b/dspace/.env
@@ -1,27 +1,97 @@
-# DSpace Environment Variables
-DSPACE_NAME="Badisa's Data Science Wonderporium" 
-DSPACE_BASE_URL=https://dspace.example.com
+# DSpace 8.1 Production Environment Variables
+# Last updated: 2025-04-01
 
-# Database settings
-POSTGRES_PASSWORD=secure_password_here
+#---------------------------------------------------------------#
+#-----------------BASIC SITE INFORMATION------------------------#
+#---------------------------------------------------------------#
+DSPACE_NAME="Badisa's Data Science Wonderporium"
+DSPACE_BASE_URL=https://localhost
+DSPACE_LANGUAGE=en
 
-# Mail configuration
+#---------------------------------------------------------------#
+#-----------------DATABASE CONFIGURATION------------------------#
+#---------------------------------------------------------------#
+# Database credentials - use strong passwords in production!
+POSTGRES_PASSWORD=postgres_pw
+POSTGRES_USER=dspace
+POSTGRES_DB=dspace
+
+#---------------------------------------------------------------#
+#-----------------EMAIL CONFIGURATION---------------------------#
+#---------------------------------------------------------------#
 MAIL_SERVER=smtp.example.com
 MAIL_PORT=587
 MAIL_FROM=dspace@example.com
 MAIL_USER=mail_user
-MAIL_PASSWORD=mail_password
+MAIL_PASSWORD=change_this_to_your_actual_mail_password
+MAIL_TLS_ENABLE=true
+FEEDBACK_RECIPIENT=feedback@example.com
 
-# Admin account
+#---------------------------------------------------------------#
+#-----------------ADMIN ACCOUNT CONFIGURATION------------------#
+#---------------------------------------------------------------#
 ADMIN_EMAIL=admin@example.com
-ADMIN_PASSWORD=admin_password
+ADMIN_PASSWORD=change_this_to_a_strong_admin_password
 ADMIN_FIRSTNAME=DSpace
 ADMIN_LASTNAME=Admin
 
-# Handle configuration
+#---------------------------------------------------------------#
+#-----------------HANDLE CONFIGURATION--------------------------#
+#---------------------------------------------------------------#
 HANDLE_PREFIX=123456789
+HANDLE_SERVER_EXTERNAL=false
 
-# Additional DSpace configuration (will be inserted into local.cfg)
+#---------------------------------------------------------------#
+#-----------------UPLOAD CONFIGURATION--------------------------#
+#---------------------------------------------------------------#
+# Maximum upload size in bytes (2GB)
+UPLOAD_MAX_SIZE=2000000000
+
+#---------------------------------------------------------------#
+#-----------------SOLR CONFIGURATION----------------------------#
+#---------------------------------------------------------------#
+# Solr server URL
+SOLR_SERVER=http://dspacesolr:8983/solr
+
+#---------------------------------------------------------------#
+#-----------------PERFORMANCE CONFIGURATION---------------------#
+#---------------------------------------------------------------#
+# Cache and performance tuning
+CACHE_ITEM_MAX=2000
+CACHE_BUNDLE_MAX=1000
+BATCH_SIZE=20
+
+#---------------------------------------------------------------#
+#-----------------SECURITY CONFIGURATION------------------------#
+#---------------------------------------------------------------#
+# Session timeout in minutes
+SESSION_TIMEOUT=60
+# Password requirements
+PASSWORD_REGEX=^.{10,}$
+PASSWORD_DESCRIPTION=Password must be at least 10 characters long
+# Statistics access control
+STATS_ADMIN_ONLY=true
+# Cross-origin configuration
+CORS_ALLOW_ORIGINS=https://dspace.example.com
+XFRAME=SAMEORIGIN
+
+#---------------------------------------------------------------#
+#-----------------BACKUP CONFIGURATION--------------------------#
+#---------------------------------------------------------------#
+# Backup settings
+BACKUP_CRON="0 1 * * *"  # Daily at 1 AM
+BACKUP_RETENTION=7       # Keep backups for 7 days
+PGBACKUP_DIR=/db-backups
+LOG_RETENTION=14         # Keep logs for 14 days
+
+#---------------------------------------------------------------#
+#-----------------ADDITIONAL CONFIGURATION---------------------#
+#---------------------------------------------------------------#
+# UI customization
+RECENT_SUBMISSIONS=10
+TIDY_ENABLE=true
+
+# Additional DSpace configuration properties 
+# These will be automatically inserted into local.cfg
 DSPACE_CFG_log__P__dir=/dspace/log
-DSPACE_CFG_upload__P__max=2000000000
 DSPACE_CFG_solr__P__server=http://dspacesolr:8983/solr
