--- a/dspace/config/local.cfg
+++ b/dspace/config/local.cfg
@@ -1,25 +1,128 @@
-# Minimal DSpace local configuration with environment variable references
+# Production-ready DSpace 8.1 local configuration with environment variable references
 
-# Basic site information
+#---------------------------------------------------------------#
+#-----------------BASIC SITE INFORMATION------------------------#
+#---------------------------------------------------------------#
+# DSpace installation name and URLs
 dspace.name = ${DSPACE_NAME}
 dspace.server.url = ${DSPACE_BASE_URL}/server
 dspace.ui.url = ${DSPACE_BASE_URL}
 
-# Database connection
+# Default language
+default.language = ${DSPACE_LANGUAGE:-en}
+
+#---------------------------------------------------------------#
+#-----------------DATABASE CONFIGURATION------------------------#
+#---------------------------------------------------------------#
+# Database connection parameters
 db.url = jdbc:postgresql://dspacedb:5432/dspace
 db.username = dspace
 db.password = ${POSTGRES_PASSWORD}
+db.maxconnections = 75
+db.maxwait = 5000
+db.maxidle = 30
 
-# Email configuration
+#---------------------------------------------------------------#
+#-----------------EMAIL CONFIGURATION---------------------------#
+#---------------------------------------------------------------#
+# SMTP mail server settings
 mail.server = ${MAIL_SERVER}
 mail.server.port = ${MAIL_PORT}
 mail.from.address = ${MAIL_FROM}
+mail.feedback.recipient = ${FEEDBACK_RECIPIENT:-${MAIL_FROM}}
+mail.admin = ${ADMIN_EMAIL}
+# Enable SMTP authentication if required
+mail.server.username = ${MAIL_USER:-}
+mail.server.password = ${MAIL_PASSWORD:-}
+# Enable TLS/SSL for secure email if needed
+mail.server.tls.enable = ${MAIL_TLS_ENABLE:-false}
+mail.extraproperties = mail.smtp.auth=true, mail.smtp.starttls.enable=true
 
-# Handle prefix
-handle.prefix = ${HANDLE_PREFIX:-123456789}
-
-# File upload limits
+#---------------------------------------------------------------#
+#-----------------FILE UPLOAD CONFIGURATION---------------------#
+#---------------------------------------------------------------#
+# Set max size of uploads in bytes (2GB = 2000000000)
+# Make sure this matches the Nginx client_max_body_size
 upload.max = ${UPLOAD_MAX_SIZE:-2000000000}
+# Temporary directory for uploads
+upload.temp.dir = ${dspace.dir}/upload
+
+#---------------------------------------------------------------#
+#-----------------HANDLE CONFIGURATION--------------------------#
+#---------------------------------------------------------------#
+# Handle prefix for persistent identifiers
+handle.prefix = ${HANDLE_PREFIX:-123456789}
+handle.canonical.prefix = ${dspace.ui.url}/handle/
+# For production, enable handle server if you're running one
+handle.server.external = ${HANDLE_SERVER_EXTERNAL:-false}
+
+#---------------------------------------------------------------#
+#-----------------AUTHENTICATION CONFIGURATION------------------#
+#---------------------------------------------------------------#
+# Authentication methods - comma-separated, in order of preference
+# Options: password, ldap, shibboleth, ip, x509, etc.
+plugin.sequence.org.dspace.authenticate.AuthenticationMethod = ${AUTH_METHOD:-org.dspace.authenticate.PasswordAuthentication}
+
+# Password requirements
+password.regex = ${PASSWORD_REGEX:-^.{8,}$}
+password.regex.description = ${PASSWORD_DESCRIPTION:-Password must be at least 8 characters long}
+
+# Session timeout in minutes
+webui.session.timeout = ${SESSION_TIMEOUT:-60}
+
+#---------------------------------------------------------------#
+#-----------------SOLR CONFIGURATION----------------------------#
+#---------------------------------------------------------------#
+# Solr server connection
+solr.server = http://dspacesolr:8983/solr
+# Use embedded Solr server? (not for production)
+solr.server.embedded = false
+
+#---------------------------------------------------------------#
+#-----------------PERFORMANCE OPTIMIZATION----------------------#
+#---------------------------------------------------------------#
+# Number of DSpace items (including bitstreams) to include in a batch
+# during indexing, imports, etc. (higher = better performance, more memory)
+bulk.batch.size = ${BATCH_SIZE:-10}
+
+# Cache settings
+cache.enable = true
+cache.default.size = 250
+cache.item.maxSize = ${CACHE_ITEM_MAX:-1000}
+cache.bundle.maxSize = ${CACHE_BUNDLE_MAX:-1000}
+
+#---------------------------------------------------------------#
+#-----------------SECURITY CONFIGURATION------------------------#
+#---------------------------------------------------------------#
+# Enable CSRF protection
+rest.csrf-tokens.enable = true
+
+# X-Frame-Options header value
+xmlui.xframe = ${XFRAME:-SAMEORIGIN}
+
+# Enable IP-based access control
+usage-statistics.authorization.admin.usage = ${STATS_ADMIN_ONLY:-true}
+
+#---------------------------------------------------------------#
+#-----------------BACKUP & CURATION TASKS-----------------------#
+#---------------------------------------------------------------#
+# How many days to keep logs
+log.retention = ${LOG_RETENTION:-14}
+
+# Bitstream format registry in case formats aren't recognized
+registries.bitstream-formats.xml = ${dspace.dir}/config/registries/bitstream-formats.xml
+
+#---------------------------------------------------------------#
+#-----------------ADDITIONAL CONFIGURATIONS---------------------#
+#---------------------------------------------------------------#
+# Maximum number of items shown in recent submissions
+recent.submissions.count = ${RECENT_SUBMISSIONS:-5}
+
+# Metadata cleanup - remove nonascii, spaces, etc. and enforce consistent presentation
+webui.tidy.enabled = ${TIDY_ENABLE:-true}
+
+# Enhanced server-side validation for submissions
+item-submission.validate.json = true
 
 # The entrypoint script will handle populating additional configuration 
 # settings from environment variables prefixed with DSPACE_CFG_
