--- a/dspace/nginx/conf.d/dspace.conf
+++ b/dspace/nginx/conf.d/dspace.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name dspace.example.com;
+    server_name https://localhost;
     
     # Redirect all HTTP traffic to HTTPS
     location / {
@@ -45,10 +45,10 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         
-        # Proxy timeouts
-        proxy_connect_timeout 150;
-        proxy_send_timeout 100;
-        proxy_read_timeout 100;
+        # Proxy timeouts for large file uploads
+        proxy_connect_timeout 600;
+        proxy_send_timeout 600;
+        proxy_read_timeout 600;
         
         # WebSocket support (if needed)
         proxy_http_version 1.1;
@@ -59,35 +59,60 @@ server {
         proxy_cache_bypass $http_upgrade;
         proxy_buffering on;
         proxy_buffer_size 128k;
-        proxy_buffers 4 256k;
+        proxy_buffers 8 256k;
         proxy_busy_buffers_size 256k;
+        
+        # Increase temp file size for large uploads
+        proxy_max_temp_file_size 4096m;
+        proxy_temp_file_write_size 64k;
     }
     
-    # DSpace Angular UI (if applicable)
+    # DSpace Angular UI
     location / {
-        proxy_pass http://dspace-angular:4000/;
+        proxy_pass http://dspace:4000/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         
-        # Same proxy settings as above
-        proxy_connect_timeout 150;
-        proxy_send_timeout 100;
-        proxy_read_timeout 100;
+        # Longer timeouts for UI
+        proxy_connect_timeout 300;
+        proxy_send_timeout 300;
+        proxy_read_timeout 300;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
         proxy_cache_bypass $http_upgrade;
     }
     
-    # Optional: Static file caching
+    # Static file caching
     location ~* \.(jpg|jpeg|png|gif|ico|css|js|pdf)$ {
-        proxy_pass http://dspace-angular:4000;
+        proxy_pass http://dspace:4000;
         expires max;
         add_header Cache-Control "public, max-age=31536000";
     }
     
-    # Large file uploads
-    client_max_body_size 100M;
+    # Large file uploads - increased to match DSpace's 2GB limit
+    client_max_body_size 2048M;
+    
+    # Add custom error pages
+    error_page 500 502 503 504 /50x.html;
+    location = /50x.html {
+        root /usr/share/nginx/html;
+    }
+    
+    # Rate limiting for API endpoints
+    location ~ ^/server/api/ {
+        limit_req zone=dspaceapilimit burst=50 nodelay;
+        proxy_pass http://dspace:8080/server/api/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # Proxy timeouts for API operations
+        proxy_connect_timeout 600;
+        proxy_send_timeout 600;
+        proxy_read_timeout 600;
+    }
 }
