--- a/dspace/nginx/conf.d/dspace.conf
+++ b/dspace/nginx/conf.d/dspace.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name https://localhost;
+    server_name localhost;
     
     # Redirect all HTTP traffic to HTTPS
     location / {
@@ -13,8 +13,9 @@ server {
 }
 
 server {
-    listen 443 ssl http2;
-    server_name dspace.example.com;
+    listen 443 ssl;
+    http2 on;
+    server_name localhost;
     
     # SSL Configuration
     ssl_certificate /etc/nginx/ssl/dspace.crt;
@@ -64,12 +65,12 @@ server {
         
         # Increase temp file size for large uploads
         proxy_max_temp_file_size 4096m;
-        proxy_temp_file_write_size 64k;
+        proxy_temp_file_write_size 256K;
     }
     
     # DSpace Angular UI
     location / {
-        proxy_pass http://dspace:4000/;
+        proxy_pass http://dspace-ui:4000/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -102,9 +103,9 @@ server {
     }
     
     # Rate limiting for API endpoints
-    location ~ ^/server/api/ {
+    location /server/api/ {
         limit_req zone=dspaceapilimit burst=50 nodelay;
-        proxy_pass http://dspace:8080/server/api/;
+        proxy_pass http://dspace:8080/server/api;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
