--- a/dspace/.env
+++ b/dspace/.env
@@ -31,7 +31,7 @@ FEEDBACK_RECIPIENT=feedback@example.com
 #-----------------ADMIN ACCOUNT CONFIGURATION------------------#
 #---------------------------------------------------------------#
 ADMIN_EMAIL=admin@example.com
-ADMIN_PASSWORD=change_this_to_a_strong_admin_password
+ADMIN_PASSWORD=admin
 ADMIN_FIRSTNAME=DSpace
 ADMIN_LASTNAME=Admin
 
