--- a/dspace/config/local.cfg
+++ b/dspace/config/local.cfg
@@ -1,5 +1,8 @@
 # Production-ready DSpace 8.1 local configuration with environment variable references
 
+# Explicitly set dspace.dir
+dspace.dir = /dspace
+
 #---------------------------------------------------------------#
 #-----------------BASIC SITE INFORMATION------------------------#
 #---------------------------------------------------------------#
